tests/specs/run/worker_drop_handle_race/worker_drop_handle_race.js.out
error: Uncaught (in worker "") Error
  throw new Error();
        ^
    at [WILDCARD]/drop_handle_race.js:2:9[WILDCARD]
error: Uncaught (in promise) Error: Unhandled error in child worker.
    at Worker.#pollControl [WILDCARD]
